# boardgame-search-telegram-bot

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  bgg_client.py  deploy_logs.txt  handlers.py  job_logs.txt  main.py  mypy_errors.txt  mypy_final.txt  mypy_log.txt  mypy_output.txt  mypy_report.md  mypy_test.txt  mypy_verify.md  pyproject.toml  pytest_debug.txt  pytest_log.txt  pytest_output.txt  pytest_report.md  pytest_verify.md  ruff_errors.txt  ruff_log.txt  test_inline_format.py  test_none_thumbnail.py  test_thumbnail.py  test_thumbnail_access.py
.github/workflows/: ci.yml  deploy.yml  release.yml
docs/: gcp-deployment-playbook.md
scripts/: setup_secrets.sh  sync_bot_config.py  test_parallel_bgg.py
tests/: __init__.py  test_bgg_client.py
